fixed more product page formatting on mobile

--- a/src/ProductInfoPage.css
+++ b/src/ProductInfoPage.css
@@ -35,9 +35,10 @@ body, html {
 
 .product-header {
   padding: 30px 0 0 0;
-  text-align: center;
-  font-size: 1.5rem;
-  overflow-x: hidden;
+}
+
+.product-header h1 {
+  overflow-wrap: break-word;
 }
 
 .product-info-order-panel {
@@ -45,6 +46,7 @@ body, html {
   margin-top: 5rem;
   border: 1px solid black;
   border-radius: 5px;
+  height: fit-content;
 }
 
 .product-main-image {
@@ -125,6 +127,7 @@ p {
   margin-right: 100px;
   margin-top: 1rem;
   display: flex;
+  max-width: 100vw;
 }
 
 .quantity-option {
@@ -210,14 +213,17 @@ p {
   margin-bottom: 0;
 }
 
-@media (max-width: 1000px) {
-  .product-main-image {
-    width: 50%;
-  }
+@media (max-width: 1200px) {
   .product-info-content {
     flex-direction: column; /* Change to column layout */
     align-items: center;
     padding: 1rem; /* Adjust padding as needed */
+  }
+}
+
+@media (max-width: 1000px) {
+  .product-main-image {
+    width: 50%;
   }
   .product-info-order-panel {
     margin-left: 4vw;
@@ -229,10 +235,17 @@ p {
     margin-left: 4vw;
     margin-right: 4vw;
   }
-  .product-header {
-    padding: 0;
+
+  .product-header h1 {
     margin-top: 0;
   }
+
+  .product-header {
+    padding: 0 20%;
+    text-align: center;
+    max-width: 100vw;
+  }
+
 }
 
 @media (max-width: 768px) {
@@ -252,8 +265,9 @@ p {
     font-size: 0.9rem;
   }
  
-  .product-header {
-    font-size: 1rem;
+  .product-header h1 {
+    font-size: 1.5rem;
+    padding: 0 20%;
   }
 
   .option-input-field {
